# config/routes.rb
@@ -11,5 +11,6 @@ Rails.application.routes.draw do
     get '/games/:id', to: 'games#show'
     post '/games', to: 'games#create'
     post '/games/:id/reveal', to: 'games#reveal'
+    post '/games/:id/flag', to: 'games#flag'
   end
 end
