# swagger/v1/swagger.yaml
@@ -164,6 +164,79 @@ paths:
               required:
               - row
               - column
+  "/api/games/{id}/flag":
+    post:
+      summary: Flags a cell
+      tags:
+      - Game
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Updated game
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  cells:
+                    type: object
+                    properties:
+                      row:
+                        type: integer
+                      column:
+                        type: integer
+                      value:
+                        type: string
+                        enum:
+                        - 1
+                        - 2
+                        - 3
+                        - 4
+                        - 5
+                        - 6
+                        - 7
+                        - 8
+                        - 9
+                        - "?"
+                        - M
+        '404':
+          description: Game not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '400':
+          description: Cell not found, Finished game and Missing cell information
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                row:
+                  type: integer
+                column:
+                  type: integer
+              required:
+              - row
+              - column
 servers:
 - url: https://{defaultHost}
   variables:
